Update Git's "includeIf" paths for new hierarchy

--- a/git/dot-config/git/config
+++ b/git/dot-config/git/config
@@ -132,7 +132,7 @@
     name = Wolf
     email = Wolf@zv.cx
 
-[includeIf "gitdir:~/development/DMP/"]
+[includeIf "gitdir:~/develop/dmp/"]
     path = ~/.config/git/config-dmp
 
 [includeIf "os:macos"]
