Helix: add key sequences to toggle inline diagnostics

--- a/helix/dot-config/helix/config.toml
+++ b/helix/dot-config/helix/config.toml
@@ -35,6 +35,8 @@ cursor-line = "warning"
 
 [keys.normal.backspace]
 f = ":reflow 120"
+d = ":set-option inline-diagnostics.cursor-line disable"
+D = ":set-option inline-diagnostics.cursor-line warning"
 a = ":set line-number absolute"
 r = ":set line-number relative"
 w = ":set whitespace.render none"
