--- a/starship/dot-config/starship.toml
+++ b/starship/dot-config/starship.toml
@@ -2,7 +2,8 @@ command_timeout = 5000
 add_newline = true
 
 format = """
-${custom.shell}\
+${custom.shell_is_bash}\
+${custom.any_other_shell}\
 ${custom.readline}\
 ${custom.drive_label}\
 $username\
@@ -45,10 +46,15 @@ format = "[$user]($style)@"
 symbol = " "
 format = '[${symbol}(${version} )(\($virtualenv\) )]($style)'
 
-[custom.shell]
+[custom.shell_is_bash]
+command = "echo bash"
+format = "[$output](bold red)"
+when = "[[ ${STARSHIP_SHELL} =~ bash ]]"
+
+[custom.any_other_shell]
 command = "echo $STARSHIP_SHELL"
-format = "[$output](bold red)($STARSHIP_SHELL=~bash )"
-when = true
+format = "[$output](bold red) "
+when = "[[ ${STARSHIP_SHELL} != bash ]]"
 
 [custom.pixi_env]
 # because the conda module doesn't seem to work with pixi
