atuin: also store commands that failed, so I can fix and re-run them

--- a/atuin/dot-config/atuin/config.toml
+++ b/atuin/dot-config/atuin/config.toml
@@ -1,3 +1,7 @@
+# Things listed in the docs, but which didn't appear as comments here
+
+store_failed = true
+
 ## where to store your database, default is your system data directory
 ## linux/mac: ~/.local/share/atuin/history.db
 ## windows: %USERPROFILE%/.local/share/atuin/history.db
