atuin: history_filter was set just to clean up a bad import
...we don't need it anymore.

--- a/atuin/dot-config/atuin/config.toml
+++ b/atuin/dot-config/atuin/config.toml
@@ -107,9 +107,9 @@ invert = true
 ## with ^ or end with $, they'll match anywhere in the command.
 ## For details on the supported regular expression syntax, see
 ## https://docs.rs/regex/latest/regex/#syntax
-history_filter = [
-  "^:",
-]
+# history_filter = [
+#   "^:",
+# ]
 
 ## prevent commands run with cwd matching any of these regexes from being written
 ## to history. Note that these regular expressions are unanchored, i.e. if they don't
