--- a/atuin/dot-config/atuin/config.toml
+++ b/atuin/dot-config/atuin/config.toml
@@ -76,7 +76,7 @@ search_mode_shell_up_key_binding = "prefix"
 # inline_height = 0
 
 ## Invert the UI - put the search bar at the top , Default to `false`
-invert = true
+# invert = true
 
 ## enable or disable showing a preview of the selected command
 ## useful when the command is longer than the terminal width and is cut off
