--- a/git/dot-config/git/bin/pyproject.toml
+++ b/git/dot-config/git/bin/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
 dev = [
     "pytest",
     "pytest-cov",
+    "git-workflow-utils @ git+https://github.com/wolf/git-workflow-utils.git",
 ]
 
 [tool.coverage.run]
