Use the modern pyproject.toml key: dependency-groups

--- a/git/dot-config/git/bin/pyproject.toml
+++ b/git/dot-config/git/bin/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "typing_extensions",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "pytest",
     "pytest-cov",
