Enable inlay hints in Helix
- Add display-inlay-hints = true to editor.lsp
- Configure rust-analyzer to show type, parameter, and chaining hints

--- a/helix/dot-config/helix/languages.toml
+++ b/helix/dot-config/helix/languages.toml
@@ -13,6 +13,11 @@ roots = [
 [language-server.rust-analyzer.config]
 check.command = "clippy"
 
+[language-server.rust-analyzer.config.inlayHints]
+typeHints.enable = true
+parameterHints.enable = true
+chainingHints.enable = true
+
 [language-server.ruff-server]
 command = "ruff"
 args = ["server"]
