--- a/helix/dot-config/helix/config.toml
+++ b/helix/dot-config/helix/config.toml
@@ -30,6 +30,9 @@ mode.normal = "NORMAL"
 mode.insert = "INSERT"
 mode.select = "SELECT"
 
+[editor.lsp]
+display-inlay-hints = true
+
 [editor.inline-diagnostics]
 cursor-line = "warning"
 
